syntax = "proto3";

package huskysoft.gotagme.tag;

import "./approval.proto";
import "./costume.proto";
import "./user.proto";

message Tag {
  string id = 1;
  string tag = 2;
  string key = 3;
  int32 createdAt = 4;
  User addedBy = 5;
  Photo photo = 6;
  string display = 7;

  oneof value {
    User taggedUser = 8;
    Costume costume = 9;
    string hashtag = 10;
  }

  ApprovalState state = 11;
}

message AddTagsToPhotoRequest {
  repeated Tag tags = 1;
  Tag capturedBy = 2;
}

message ModifyTagRequest {
  string id = 1;
  ApprovalState state = 2;
}

message GetTagsRequest {
  oneof id {
    string tagID = 1;
    string photoID = 2;
    string userID = 3;
    string costumeID = 5;
    string hashtag = 6;
  }
  ApprovalState stateFilter = 4;
}

message GetTagsResponse {
  repeated Tag tags = 1;
  Tag capturedBy = 2;
}

message GetAutocompleteTagsRequest {
  string term = 1;
}

message GetAutocompleteTagsResponse {
  repeated Tag tags = 1;
}

message RejectTagRequest {
  string id = 1;
}

message GetTagCountsRequest {
  // Use only one of the three types.
  repeated string costumeIDs = 1;
  repeated string userIDs = 2;
  repeated string hashtags = 3;
}

message GetTagCountResponse {
  uint32 count = 1;
  oneof value {
    Costume costume = 2;
    User user = 3;
    string hashtag = 4;
  }
}

message GetTagCountsResponse {
  repeated GetTagCountResponse responses = 1;
}
